--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vitepress-ctf-documentation",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.md",
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
